# fastapi_ml_model

./: README.md  pyproject.toml
libs/: logger.py
model/: model.py
model/training/: train.py
