[tool.poetry]
name = "fastapi_ml_model"
version = "0.1.0"
description = "Just a sample project using fastapi for delivering predictions"
authors = ["Alfonso Montilla <alfonso.montilla@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "~=3.7"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
pandas = "1.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
flake8 = "^4.0.1"
black = "^22.3.0"
ipython = "~=7.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
